html/css/dashboard.css
/* ... */
#zoom-controllers {
    position:absolute;
    right:0px;
    top:0px;
    z-index:10;
}
#zoom-controllers > span {
    display: inline-block;
    background: transparent;
    cursor:pointer;
    display:block;
    float:left;
    height:45px;
    width:45px;
    background-position:center center;
    background-repeat:no-repeat;
    background-size:24px;
    transition: all 0.5s;
    opacity: 0.66;
    margin: 0;
    padding: 0;
}
#zoom-controllers > span:hover,
#zoom-controllers > span:active {
    background-color:#000;
    opacity: 1;
}
#zoom-controllers > span:first-child {
    background-image:url(../img/icn-zoom-out.png);
    border-right:1px solid #292929;
}
#zoom-controllers > span:last-child {
    background-image:url(../img/icn-zoom-in.png);
}


/* Pedalboard Info - Header */
#pedalboard-info {
    height:100%;
    left:45px;
    margin:0;
    padding:0;
    display: inline-block;
}

#pedalboard-info .title {
    color:#fff;
    cursor:pointer;
    display:block;
    float:left;
    height:36px;
    font-size:18px;
    font-weight:bold;
    line-height:2;
    margin-right:10px;
    overflow:hidden;
    position:relative;
}


#pedalboard-info .favorite {
    background:url(../img/icn-favorite-off.png) no-repeat center center;
    cursor:pointer;
    float:left;
    height:36px;
    width:36px;
}

#pedalboard-info .favorite.selected {
    background:url(../img/icn-favorite-on.png) no-repeat center center;
}

#pedalboard-info .settings {
    background:url(../img/icn-settings.png) no-repeat center center;
    cursor:pointer;
    float:left;
    height:36px;
    width:36px;
}

#pedalboard-info .settings.selected {
    background-color:#444;
}

#pedalboard-info .settings a,
#pedalboard-info .favorite a {
    display:block;
    height:36px;
    text-align:center;
    width:36px;
}

#pedalboard-info .actions {
    font-weight:bold;
    position:absolute;
    right:0;
    top:0;
}

#pedalboard-info .actions > button {
    margin-top:-25px;
}

#pedalboard-info .actions .separator {
    border-left:1px dotted #444;
    display:inline-block;
    height:100%;
    margin:0 6px;
}

/* Pedalboard Settings Window */
#pedalboard-settings {
    background:#444;
    bottom:46px;
    left:0;
    padding:10px;
    position:absolute;
    right:0;
    top:36px;
    z-index:2;
}

#pedalboard-settings h1 {
    color:#fff;
    font-size:24px;
    line-height:1;
    text-shadow:0 1px 3px #000;
}

/* Share Pedalboard */
#pedalboard-sharing {
    height:36px;
    position:absolute;
    right:0;
    top:0;
}

#pedalboard-sharing .button {
    background:#222 url(../img/icn-share.png) no-repeat center center;
    cursor:pointer;
    height:36px;
    width:64px;
}

#pedalboard-sharing .button:hover, #pedalboard-sharing .button.selected {
    background-color:#444;
}

#pedalboard-sharing-popup {
    background:#444;
    bottom:0;
    padding:10px;
    position:absolute;
    left:0;
    right:0;
    top:36px;
    z-index:3;
}

#pedalboard-sharing-popup h1 {
    color:#fff;
    font-size:18px;
    margin:0 0 10px 0;
    padding:0;
    text-shadow:0 1px 0 #000;
}

#pedalboard-sharing-popup label {
    color:#fff;
    float:left;
    font-size:11px;
    font-weight:bold;
    height:30px;
    line-height:2.9;
    margin-bottom:10px;
    text-align:left;
    text-shadow:0 1px 2px #000;
    text-transform:uppercase;
    width:85px;
}

#pedalboard-sharing-popup textarea {
    height:150px;
    margin-bottom:10px;
}

#pedalboard-sharing-popup .item-list {
    color:#fff;
    font-size:11px;
    font-weight:bold;
    list-style:none;
    margin:6px 0 10px 84px;
    padding:0;
}

#pedalboard-sharing-popup .item-list .item {
    background:#2b2b2b;
    border-radius:6px;
    display:block;
    float:left;
    height:18px;
    padding:3px 9px;
}

#pedalboard-sharing-popup .submit {
    text-align:right;
}




/* = CONNECTORS
================================================ */

/* AUDIO */

.mod-audio-output .mod-output-jack {
    background-image: url(../img/audio-jack-nconnect.png);
    background-repeat: no-repeat;
    background-position: 0 0;
    position: absolute;
    width: 128px !important;
    height: 56px;
    cursor: pointer;
}
.mod-audio-output.output-connected .mod-output-jack {
    background-image: url(../img/audio-jack.png);
    background-size: 50%;
    background-position: 100% 100%;
    height: 70px;
}
.mod-audio-output .mod-output-jack.jack-connecting {
    background-image: url(../img/audio-jack.png);
    background-size: 100%;
    height: 56px;
}

.mod-audio-output {
    background-image: url(../img/audio-output.png);
    background-repeat: no-repeat;
    position: absolute;
    width: 87px;
    height: 56px;
    left: 0px;
    z-index: 90;
}
.mod-audio-output.output-connecting {
    background-image: url(../img/audio-output-connected.png);
}
.mod-audio-output.output-connected {
    background-image: url(../img/audio-output-connected.png);
}


.mod-audio-input .mod-output-jack {
    width: 128px !important;
    height: 56px;
    cursor: pointer;
}

.mod-audio-input {
    background-image: url(../img/audio-input.png);
    background-repeat: no-repeat;
    background-position: 50% 100%;
    position: absolute;
    width: 88px;
    height: 56px;
    right: 0px;
    z-index: 90;
}
.mod-audio-input.input-connecting {
    background-image: url(../img/audio-input-connecting.png);
}
.mod-audio-input.input-connecting-highlight {
    background-image: url(../img/audio-input-connecting-highlight.png);
}
.mod-audio-input.input-connected {
    background-image: url(../img/audio-input-connected.png);
}
.mod-audio-input.input-connected.input-connecting-highlight {
    background-image: url(../img/audio-input-connected-highlight.png);
}
.mod-audio-input .mod-output-jack.jack-connecting {
    background-image: url(../img/audio-jack.png);
}
/* ... */

